--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Sibla Cosmetics</title>
 </head>
 <body>
+    <div id="loader">
+        <div class="spinner"></div>
+      </div>
     <div class="core">
         <div class="contn">
             <button class="button-85">Order now اشتري الان</button>
